--- a/SecHack365_project/info_sharing_system/app/templates/index.html
+++ b/SecHack365_project/info_sharing_system/app/templates/index.html
@@ -172,7 +172,7 @@
             
             <div class="menu-item" onclick="showMedicalDetail('tests')">
                 <h3>検査結果</h3>
-                <p>最新の検査結果と数値</p>
+                <p>最新の検査データと数値</p>
             </div>
             
             <div class="menu-item" onclick="sendToRaspberryPi()" style="background: #e67e22; color: white;">
